<resources>
    <string name="app_name">Timely</string>

    <!--로그인-->
    <string name="login">로그인</string>
    <string name="use_not_login">로그인 없이 이용하기</string>

    <!--튜토리얼-->
    <string name="can_use_not_login">로그인 없이 사용 가능 합니다.</string>
    <string name="important_to_login">로그인을 하지 않으면 앱 삭제 시 데이터도 삭제됩니다.</string>
    <string name="want_group_or_">그룹, 마이프로필을 사용하고 싶으면 로그인을 해야합니다.</string>

    <!--바텀 네비게이션-->
    <string name="calendar">캘린더</string>
    <string name="group">그룹</string>
    <string name="my_profile">마이프로필</string>

    <!--일정 추가-->
    <string name="title">제목</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="repeat">반복</string>
    <string name="place">장소</string>
    <string name="appointment_alarm">약속시간 알림</string>
    <string name="color">색상</string>

    <string name="none">없음</string>
    <string name="everyday">매일</string>
    <string name="everyweek">매주</string>
    <string name="everymonths">매월</string>

    <string name="start_date">시작날짜</string>
    <string name="last_date">마지막 날짜</string>
    <string name="start_time">시작 시간</string>
    <string name="end_time">마지막 시간</string>

    <string name="init_visibility">gone</string>
    <string-array name="repeat_choice">
        <item>없음</item>
        <item>매일</item>
        <item>매주</item>
        <item>매월</item>
    </string-array>
    <string name="appointment_place">약속 장소</string>
    <string name="alarm_time">알림 설정</string>
    <string-array name="alarm_choice">
        <item>1시간전</item>
        <item>1시간 30분전</item>
        <item>2시간전</item>
        <item>2시간 30분전</item>
        <item>3시간전</item>
    </string-array>

    <string name="cancel">취소</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>

    <!--그룹 추가-->
    <string name="add_group">그룹 생성</string>
    <string name="group_name">그룹 이름</string>
    <string name="group_schedule_title">그룹 스케줄 제목</string>

    <!--위치 검색 -->
    <string name="search_location">검색어를 입력하세요.</string>

    <!--그룹리스트-->
    <string name="group_list">내 그룹</string>

    <!--스케줄-->
    <string name="participation">참석</string>
    <string name="not_group_appointment_time">그룹 약속 시간이 아닙니다.</string>

    <!--그룹 관리-->
    <string name="invite_group">그룹 초대 메세지 보내기</string>
    <string name="cancel_location_share">그룹 위치 공유 취소하기</string>
    <string name="group_members">그룹 멤버</string>

    <!--마이 프로필-->
    <string name="not_login_state">로그인하지 않은 상태입니다.</string>
    <string name="nickname">닉네임</string>

    <string name="total_appointment">약속</string>
    <string name="late_appointment">지각</string>
    <string name="lateness">지각률</string>
    <string name="percent_lateness">0%</string>

    <string name="invite_message_box">받은 초대 메세지</string>
    <string name="setting">설정</string>
    <string name="profile_edit">프로필 수정</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
</resources>