<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView_root">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.calendar.schedule.AddScheduleFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@fraction/guideline_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@fraction/guideline_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@fraction/guideline_second" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="255dp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:imeOptions="actionDone"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/small_margin"/>

        <View
            android:id="@+id/view_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/et_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/view_title"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_date"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@id/view_title"
            android:layout_marginTop="@dimen/text_margin"/>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <View
            android:id="@+id/view_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/view_date"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/start_time"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@id/view_date"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/end_time"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@id/view_date"
            android:layout_marginTop="@dimen/text_margin"/>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/text_margin"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv_time"/>

        <View
            android:id="@+id/view_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/timePicker"
            android:layout_marginTop="@dimen/text_margin"/>


        <View
            android:id="@+id/view_repeat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/view_time" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/view_repeat"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_appointment_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/appointment_place"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@id/view_repeat"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_place_24"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/view_repeat"
            android:layout_marginTop="@dimen/text_margin"/>

        <View
            android:id="@+id/view_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tv_place"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/v_appointment_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment_alarm"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/view_place"
            android:layout_marginTop="@dimen/text_margin" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_appointment_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/view_place"
            android:layout_marginTop="@dimen/text_margin"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_time"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/v_appointment_alarm"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_alarm"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:entries="@array/alarm_choice"
            android:spinnerMode="dropdown"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/v_appointment_alarm"
            android:layout_marginTop="@dimen/text_margin"/>

        <View
            android:id="@+id/view_alarm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/v_appointment_alarm"
            android:layout_marginTop="@dimen/margin_20"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>